--- a/custom_components/wood_calculator/manifest.json
+++ b/custom_components/wood_calculator/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "documentation": "https://github.com/Jujuka89/wood_calculator",
   "dependencies": [],
-  "codeowners": ["@jujuka89"],
+  "codeowners": ["@Jujuka89"],
   "requirements": []
 
 
